--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -8,6 +8,8 @@ jobs:
   changed-files:
     if: ${{ ! github.event.pull_request.head.repo.fork }}
     runs-on: ubuntu-latest
+    outputs:
+      uniqdirs: ${{ steps.get-dirs.outputs.uniqdirs }}
     steps:
       - uses: actions/checkout@v4
 
@@ -33,7 +35,7 @@ jobs:
 
   api-tests-rewrite-on-changes:
     needs: changed-files
-    if: ${{ needs.changed-files.outputs.any_changed == 'true' }}
+    if: ${{ length(needs.changed-files.outputs.uniqdirs) > 0 }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
