--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Determine changed dirs
         id: get-dirs
         run: |
-          uniqdirs=$(dirname ${{ steps.changed-files.outputs.all_changed_files }} | sort | uniq)
+          uniqdirs=$(dirname ${{ steps.changed-files.outputs.all_changed_files }} | sort | uniq | tr '\n' ' ')
           echo "alldirs=$uniqdirs" >> $GITHUB_OUTPUT
 
       - name: List all changed WDL directories
